[package]
name = "ban2bgp"
version = "0.2.0"
authors = ["Vladimir Melnikov <wlad.w.m@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wladwm/bgp2bgp"
keywords = ["BGP"]
categories = ["networking"]
description = "BGP blackholer temporary injects given banned IP addresses as blackhole routes into your network to pevent black hats to compromise your services"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zettabgp = { version = "0.3.4" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
hyper = { version = "0", features = ["full"] }
futures = "0"
futures-util = "0"
chrono = "0"
ini = { version = "1.3"}
html-escape = "0.2"
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0"
pretty_env_logger = "0"

